--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <div class="container">
     <h1>Click Link to Watch</h1>
 
-    <a href="https://bulu-pid-tv.github.io/7Dr8n6181.mp4/" class="download-btn">
-      https://cdn.videy.co/7Dr8n6181.mp4
+    <a href="https://bulu-pid-tv.github.io/gOOz1VDh1.mp4/" class="download-btn">
+      https://cdn.videy.co/gOOz1VDh1.mp4
     </a>
 
     <!-- Tombol GIF -->
